# slim-gh-api-wrapper

./: Makefile  pyproject.toml
slgh/: __init__.py  pat.py
slgh/_classes/: exceptions.py  pat.py
slgh/rest/issues/: repoIssues.py
